centjes-gen/test_resources/register/valid/example.cent
currency USD 0.01

account equity
account assets
account expenses

2023-12-21
  | opening
  * equity -1 USD
  * assets +1 USD

2023-12-17
  | Coffee
  * assets   -1 USD
  * expenses +1 USD
