centjes-gen/test_resources/register/error/CONVERT_ERROR_MISSING_PRICE.cent
currency USD 0.01
currency CHF 0.05

account assets
account income

2023-12-15
  * assets +1.00 USD
  * income -1.00 USD
